Prevent book card overflow

--- a/style.css
+++ b/style.css
@@ -172,3 +172,7 @@ input {
     display: block;
     opacity: 0.5;
 }
+
+.book-card > p {
+    word-break: break-word;
+}
